# _dedso--bot

./: .example.env  .flake8  Dockerfile  docker-compose.yml  pyproject.toml
src/: DBsettings.py  bot.py  main.py  settings.py
src/cogs/commands/: ping.py
src/cogs/commands/manage/: start.py  stop.py
src/cogs/commands/register/: join.py  points.py  view.py
src/cogs/events/: ready.py
src/database/: create.py
