[tool.poetry]
name = "_d3d$0-"
version = "0.1.0"
description = "a bot for the d3d$0 discord server"
authors = ["DFAWX31"]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = {git = "https://github.com/Pycord-Development/pycord"}
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
