[tool.poetry]
name = "_d3d$0-"
version = "0.1.0"
description = "a bot for the d3d$0 discord server"
authors = ["DFAWX31"]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = {git = "https://github.com/Pycord-Development/pycord"}
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.39"
psycopg = "^3.0.15"
pydantic = "^1.9.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"
line_length = 120